fixed header not aligned bug

--- a/app/javascript/styles/flora/overrides.scss
+++ b/app/javascript/styles/flora/overrides.scss
@@ -59,10 +59,6 @@ body.app-body.layout-multiple-columns {
     padding: 5px 0px 10px 60px !important;
 }
 
-.tabs-bar__wrapper {
-    padding: 0;
-}
-
 .privacy-dropdown__dropdown, .emoji-mart-scroll,
 .getting-started__footer, .emoji-mart-category-label span,
 .emoji-mart-search {
