--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -3509,6 +3509,7 @@ a.status-card.compact:hover {
   z-index: 2;
   outline: 0;
   overflow: hidden;
+  margin: 0px;
 
   & > button {
     margin: 0;
